[package]
name = "equart"
version = "0.2.0"
authors = ["George Shuklin <george.shuklin@gmail.com>"]
edition = "2018"

[dependencies]
piston = "*"
piston_window = "*"
image = "*"
vecmath = "*"
rand = "*"
num_cpus = "*"
gfx_device_gl = "*"
array2d = "*"
criterion = "0.3"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "treebench"
harness = false
